# icon-theme

./: .gitignore  AUTHORS  CONTRIBUTING  LICENSE.recolor  Makefile  README.md  README_BACKUP_17076.md  cursor.theme.in  icons-recolor.sh  icons-split.sh  index.theme.in  master-render.py  meson.build  paper-icon-theme.doap  pop-icon-theme.spec  pop-icon-theme_3.0.0_all.deb  pop-icon-theme_3.0.0~1650300304~22.04~28b598d_all.deb  svgo.config.js
.github/: ISSUE_TEMPLATE  ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: issue.yml
Papirus/: index.theme
Papirus-Dark/: index.theme
Papirus-Light/: index.theme
Pop/: index.theme
Pop Overrides/: index.theme
Pop-Dark/: index.theme
Pop/cursors/: half-busy  wait  watch.ani
debian/: changelog  changelog.orig  control  files  pop-icon-theme-extra.install  pop-icon-theme.install  pop-icon-theme.links  pop-icon-theme.postrm.debhelper  pop-icon-theme.preinst  rules
debian/pop-icon-theme/DEBIAN/: control  md5sums  postinst
ePapirus/: index.theme
meson/: post_install.py
src/: Paper.gpl  README.md
src/bitmaps/: render-bitmaps-nu.py  render-bitmaps.py
src/cursors/: README.md  w32-make.sh  x11-make.sh
src/fullcolor/: README.md  distributor-logos.sh
src/panel/: extract-dark-panel-icons.rb  extract-panel-icons.rb
src/scalable/: README.md  extract-symbolic-icons.rb  generate-symbolic-symlinks.sh  source-symbolic.svg.orig
src/symlinks/: README.md  generate-output.txt  generate-symlinks.sh  output.txt
src/symlinks/bitmaps/: actions.list  apps.list  categories.list  devices.list  (+4 more)
src/vector/: extract-vector-icons.rb
(+6 files in other folders)
